--- a/package.json
+++ b/package.json
@@ -7,25 +7,28 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "seed": "npx ts-node scripts/seed.ts"
+    "seed": "tsx scripts/seed.ts"
   },
   "dependencies": {
-    "@supabase/ssr": "^0.5.1",
-    "@supabase/supabase-js": "^2.45.4",
-    "next": "15.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "@supabase/supabase-js": "2",
+    "classnames": "2",
+    "next": "14",
+    "react": "18",
+    "react-dom": "18"
   },
   "devDependencies": {
-    "@types/node": "^20.17.6",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "15.0.0",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.14",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "@types/node": "20",
+    "@types/react": "18",
+    "autoprefixer": "10",
+    "eslint": "8",
+    "eslint-config-next": "14",
+    "postcss": "8",
+    "tailwindcss": "3",
+    "ts-node": "10",
+    "tsx": "4",
+    "typescript": "5"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
